--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up JDK 8
-        uses: actions/setupjava@v1
+        uses: actions/setup-java@v1
         with:
           java-version: 8
 
@@ -26,6 +26,6 @@ jobs:
         # Publish Test Result
         - name: Publish Unit Test Results
           uses: EnricoMi/Publish-unit-test-result-action@v1
-          if: ${{ always() }}
+          if: ${{always()}}
           with:
             files: build/test-results/**/*.xml
