chore: Add PR Test Github Action Script

--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -2,7 +2,9 @@ name: PR Test
 
 on:
   pull_request:
-    branches:[ master, develop ] # master and develop
+    branches:
+      -'master'
+      -'develop'
 
 jobs:
   test:
