--- a/.github/workflows/pr-unittest.yml
+++ b/.github/workflows/pr-unittest.yml
@@ -17,6 +17,10 @@ jobs:
         with:
           java-version: 1.8
 
+      # Setup Gradle
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
       # Run Gradle Test
       - name: Test with Gradle
         run: ./gradlew --info test
@@ -24,6 +28,6 @@ jobs:
       # Publish Test Result
       - name: Publish Unit Test Results
         uses: EnricoMi/Publish-unit-test-result-action@v1
-        if: ${{ always() }}
+        if: ${{always()}}
         with:
           files: build/test-results/**/*.xml
