--- a/.github/workflows/pr-unittest.yml
+++ b/.github/workflows/pr-unittest.yml
@@ -12,10 +12,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: '11'
+          distribution: 'temurin'
+          cache: gradle
+
+
 
       # Setup Gradle
       - name: Setup Gradle
