chore: Add PR Test Github Action Script

--- a/.github/workflows/pr-unittest.yml
+++ b/.github/workflows/pr-unittest.yml
@@ -26,8 +26,11 @@ jobs:
         run: ./gradlew --info test
 
       # Publish Test Result
-      - name: Publish Unit Test Results
-        uses: EnricoMi/Publish-unit-test-result-action@v1
-        if: ${{ always() }}
-        with:
-          files: build/test-results/**/*.xml
+#      - name: Publish Unit Test Results
+#        uses: EnricoMi/Publish-unit-test-result-action@v1
+#        if: ${{ always() }}
+#        with:
+#          files: build/test-results/**/*.xml
+      - name: Android Test Report
+        uses: asadmansr/android-test-report-action@v1.2.0
+        if: ${{ always() }} # IMPORTANT: run Android Test Report regardless
