--- a/.github/workflows/pr-unittest.yml
+++ b/.github/workflows/pr-unittest.yml
@@ -12,10 +12,13 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: '11'
+          distribution: 'temurin'
+          cache: gradle
+
 
       # Grant File execute permission Gradle Wrapper
       - name: Grant execute permission for gradlew
